@@ -38,7 +38,14 @@ class DrupalGoogleMini extends GoogleMini {
       $cached_result_xml = $_cached_result_xml->data;
       $google_debug = variable_get('google_appliance_debug', 0);
       if ($cached_result_xml) {
-        $google_results = GoogleMini::resultFactory($cached_result_xml, $iteratorClass);
+        try {
+          $google_results = GoogleMini::resultFactory($cached_result_xml, $iteratorClass);
+        }
+        catch (Exception $e) {
+          drupal_set_message($e->getMessage(), 'error');
+          watchdog('google_appliance', $e->getMessage());
+          return FALSE;
+        }
         if ($google_debug >= 2 ){
           if (function_exists('dpr')) {
             dpr("got cache for $cache_key");
@@ -49,7 +56,14 @@ class DrupalGoogleMini extends GoogleMini {
         }
       }
       else {
-        $google_results = parent::query($iteratorClass);
+        try {
+          $google_results = parent::query($iteratorClass);
+        }
+        catch (Exception $e) {
+          drupal_set_message($e->getMessage(), 'error');
+          watchdog('google_appliance', $e->getMessage());
+          return FALSE;
+        }
         $timeout = variable_get('google_appliance_cache_timeout', 600); // 10 minutes by default
         cache_set($cache_key, $google_results->payload->asXML(), 'cache_google_appliance', time() + $timeout);
         $google_debug = variable_get('google_debug', 0);
