@@ -21,3 +21,5 @@ Google Appliance 6.x-2.2
   google_appliance_update_6201
   
 - [#528428] by jweowu: added google_appliance_update_6000
+
+- [#704002] by SamLerner: improved handling of errors during ->query()
